# makepad

./: .gitignore  Cargo.toml  aigame.md  aigame_parity_gap.md  aigame_port_findings.md  aigame_port_inventory.md  download_tts.sh  handoff.md  makepad.splash  splash.md  splash2.md  splashgame.md
.cargo/: config.toml
code_editor/src/: code_editor.rs  draw_selection.rs
draw/: Cargo.toml
draw/src/: image_cache.rs  turtle.rs
draw/src/geometry/: geometry_gen.rs
draw/src/shader/: draw_cube.rs  draw_glyph.rs  draw_pbr.rs  draw_quad.rs  draw_rotated_text.rs  draw_svg.rs  draw_svg_glyph.rs  draw_text.rs  draw_text_3d.rs  draw_vector.rs  sdf.rs
draw/src/svg/: render.rs
draw/src/text/: color_emoji_render.rs  font.rs  font_face.rs  fonts.rs  glyph_outline.rs  glyph_raster_image.rs  hvgl_render.rs  layouter.rs  loader.rs  mod.rs  rasterizer.rs  shaper.rs  slug_atlas.rs
draw/src/vector/: triangulate.rs
examples/aichat/resources/: default_history.json
examples/aichat/src/: main.rs
examples/box3d/: Cargo.toml
examples/box3d/src/: main.rs
examples/cad/src/: main.rs
examples/comfyui/: README.md
examples/comfyui/src/: app.rs  edmx.rs
examples/ddgo/: Cargo.toml  app.splash
examples/ddgo/src/: main.rs
examples/exf/src/: main.rs
examples/gamemaker/: Cargo.toml  build.rs
examples/gamemaker/resources/: aigame-dsl.md
examples/gamemaker/resources/fixtures/: sandbox3d.splash  sandbox3d_tape.json
examples/gamemaker/resources/template/: .gitignore  CLAUDE.md  game.splash
examples/gamemaker/resources/template/tools/: ag
examples/gamemaker/resources/template/tools/tapes/: selftest.json
examples/gamemaker/src/: game_view.rs  main.rs  synth.rs
examples/glass/src/: main.rs
examples/godot/: Cargo.toml
examples/godot/resources/: default_history.json
examples/godot/resources/template/: .gitignore  project.godot
examples/godot/resources/template/scenes/: main.tscn
examples/godot/resources/template/scripts/: main.gd
examples/godot/resources/template/tools/: _selftest.gd  _selftest.tscn  agent_eye.gd  gd  harness.gd  harness.tscn  sheet.py
examples/godot/resources/template/tools/tapes/: selftest.json
examples/godot/src/: main.rs
examples/uizoo/resources/: portallist.md
examples/uizoo/src/: tab_label.rs  tab_stacknavigation.rs  tab_video.rs
examples/video_player/: Cargo.toml
examples/video_player/src/: main.rs
examples/web_font/: Cargo.toml
examples/web_font/src/: main.rs
examples/xr/src/: main.rs
libs/apple_sys/src/: lib.rs
libs/box3d/: Cargo.toml  PORTING.md  README.md  box3d.profdata  pgo.sh
libs/box3d/examples/: benchmark.rs
libs/box3d/src/: aabb.rs  arena_allocator.rs  bitset.rs  body.rs  broad_phase.rs  capsule.rs  compound.rs  constants.rs  constraint_graph.rs  contact.rs  contact_solver.rs  container.rs  convex_manifold.rs  core.rs  ctz.rs  distance.rs  distance_joint.rs  dynamic_tree.rs  height_field.rs  hull.rs  id.rs  id_pool.rs  island.rs  joint.rs  lib.rs  manifold.rs  math_functions.rs  math_internal.rs  mesh.rs  mesh_contact.rs  motor_joint.rs  mover.rs  parallel_for.rs  parallel_joint.rs  physics_world.rs  prismatic_joint.rs  recording.rs  recording_replay.rs  revolute_joint.rs  scheduler.rs  (+16 more)
libs/box3d/tests/: test_allocator.rs  test_bitset.rs  test_body.rs  test_body_query.rs  test_collision.rs  test_compound.rs  test_container.rs  test_determinism.rs  test_distance.rs  test_height_field.rs  test_hull.rs  test_id.rs  test_joint.rs  test_large_world.rs  test_math.rs  test_mover.rs  test_recording.rs  test_recording_capture.rs  test_shape.rs  test_simd.rs  test_smoke.rs  test_snapshot.rs  test_table.rs  test_task_system.rs  test_world.rs
libs/linux/wayland-backend/: Cargo.toml
libs/linux/wayland-client/: Cargo.toml
libs/linux/wayland-sys/: Cargo.toml
libs/makepad_ai/src/: agent.rs
libs/rapier/: Cargo.toml
libs/rapier/crates/bench/: Cargo.toml
libs/rapier/crates/bench/src/: main.rs
libs/rapier/src/: lib.rs
libs/shared_bytes/src/: lib.rs
libs/simd-adler32/src/: lib.rs
libs/svg/src/: tessellate.rs
libs/ttf-parser/src/: lib.rs
libs/tts/: Cargo.toml  build.rs
libs/tts/examples/: roundtrip.rs  score_wav.rs
libs/tts/src/: apple.rs  kokoro.rs  lib.rs
libs/tts/src/g2p/: lexicon.rs  lts.rs  mod.rs  morph.rs  vocab.rs
libs/tts/src/kokoro/: accel.rs  adain.rs  bert.rs  decoder.rs  generator.rs  npy.rs  ops.rs  predictor.rs  stft.rs  text_encoder.rs  weights.rs
libs/tts/swift/: tts_bridge.swift
libs/tts/tools/: build_lexicon.py  convert_kokoro.py  gen_vocab.py  inspect_pth.py  ref_dump.py  ref_infer.py
libs/vulkan/ash/: Cargo.toml
libs/vulkan/bit-set/: Cargo.toml
libs/vulkan/half/: Cargo.toml
libs/vulkan/hashbrown/: Cargo.toml
libs/vulkan/indexmap/: Cargo.toml
libs/vulkan/libloading/: Cargo.toml
libs/vulkan/makepad-half/: Cargo.toml
libs/vulkan/naga/: Cargo.toml
libs/vulkan/thiserror/: Cargo.toml
libs/woff2/: Cargo.toml
libs/woff2/src/: lib.rs
libs/zune/zune-inflate/: Cargo.toml
libs/zune/zune-jpeg/: Cargo.toml
libs/zune/zune-jpeg/src/: bitstream.rs  decoder.rs  headers.rs  mcu.rs  mcu_prog.rs
platform/: Cargo.toml
platform/src/: cx.rs  cx_api.rs  draw_list.rs  geometry.rs  lib.rs  live_reload.rs  log.rs  perf_monitor.rs  texture.rs  window.rs
tools/: download_tts.sh
widgets/src/: adaptive_view.rs  animator.rs  chart.rs  dock.rs  flat_list.rs  gauss_view.rs  glass_panel.rs  html.rs  icon.rs  image.rs  keyboard_view.rs  label.rs  lib.rs  math_view.rs  pdf_view.rs  perf_graph.rs  portal_list.rs  rubber_view.rs  scroll_bar.rs  scroll_bars.rs  scroll_motion.rs  slider.rs  splash.rs  splitter.rs  stack_navigation.rs  tab.rs  text_flow.rs  text_input.rs  theme_desktop_dark.rs  theme_desktop_light.rs  theme_desktop_skeleton.rs  vector.rs  video.rs  view.rs  view_ui.rs  voice_wave.rs  widget_async.rs  widget_tree.rs  window.rs
xr/: Cargo.toml
xr/src/: 3d.md
xr/src/scene/: mod.rs  raycast_vehicle.rs  xr_depth.rs  xr_env.rs  xr_hands.rs  xr_node.rs  xr_physics.rs  xr_physics_worker.rs  xr_root.rs  xr_view.rs
xr/src/tests/scene/: xr_physics.rs
(+126 files in other folders)
