[package]
name = "makepad-example-box3d"
version = "0.1.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Box3D physics simulation rendered in 3D with makepad"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-widgets = { path = "../../widgets", version = "2.0.0" }
makepad-xr = { path = "../../xr", version = "1.0.0" }
makepad-box3d = { path = "../../libs/box3d" }
