[package]
name = "makepad-box3d"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust port of Box3D by Erin Catto (https://github.com/erincatto/box3d)"

[features]
# C: BOX3D_DISABLE_SIMD — build the scalar fallback instead of SSE2/NEON.
disable-simd = []
# C: BOX3D_DOUBLE_PRECISION — large world mode. World positions in f64.
double-precision = []
# Elide bounds checks on hull-topology indexing in the SAT hot loops
# (convex_manifold.rs). The indices come from the hull's own connectivity
# (edge.origin/edge.face/twin, support results), validated when the hull is
# built and immutable afterwards (Arc<HullData>); debug builds still check
# via debug_assert, so the full test suite exercises the contract. This is
# the port's only opt-in unsafe: it matches C's (checkless) indexing on the
# hull-heavy scenes (junkyard/washer). Off by default.
unchecked-hulls = []

[dependencies]
